# company-listing

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: router.py
api/endpoints/: company.py
core/: config.py
schema/: company.py
service/: companies_client.py
test/: test_main.py
